--- a/home/jinja2/home/home.html
+++ b/home/jinja2/home/home.html
@@ -1,3 +1,31 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Porozmawiaj ze swoją aplikacją</title>
+    <!-- Bootstrap -->
+    <link rel="stylesheet" type="text/css" href="{{ static('assets/css/bootstrap.min.css') }}">
+    <!-- Main Style -->
+    <link rel="stylesheet" type="text/css" href="{{ static('assets/css/main.css') }}">
+    <!-- Responsive Style -->
+    <link rel="stylesheet" type="text/css" href="{{ static('assets/css/responsive.css') }}">
+    <!--Icon Fonts-->
+    <link rel="stylesheet" media="screen" href="{{ static('assets/css/font-awesome.min.css') }}" />
+    <!-- Extras -->
+    <link rel="stylesheet" type="text/css" href="{{ static('assets/extras/animate.css') }}">
+    <link rel="stylesheet" type="text/css" href="assets/extras/lightbox.css') }}">
+    <!-- jQuery Load -->
+    <script src="{{ static('assets/js/jquery-min.js') }}"></script>
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+          <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+          <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+        <![endif]-->
+</head>
+{# 
+
 <h1>Porozmawiaj ze swoją aplikacją</h1>
 
 <h2>Prezentacja</h2>
@@ -5,33 +33,171 @@
 <p>Prezentacja:</p>
 
 <h2>Konkurs</h2>
-<p>Wszyscy zarejestrowani uczestnicy po prezentacji ortzymają telefon z listą pytań dotyczących spraw wszelakich. Nagrodami są</p>
 
-<h3>Rejestracja</h3>
-Wyśli sms ze swoim nickem pod numer +48 12345678
-
-<h3>Uczestnicy</h3>
-<ol>
-    <li>Boss (...948)</li>
-</ol>
-
-<h3>Regulamin</h3>
-<ol>
-    <li>rejestracja smsem z nazwą (emailem?)</li>
-    <li>odesłanie potwierdzenia</li>
-    <li>po prezentacji telefon od aplikacji do uczestników z pytaniami konkursowymi, odpowiedzi są przy pomocy tonowo wybieranych numerów,
-        <ul>
-            <li>wszyscy mają te same pytania, ale są podane w losowej kolejności i losowa kolejność odpowiedzi (żeby uniknąć zapamiętania kolejności odpowiedzi z jednego konta i udzielania na szybko z drugiego),</li>
-            <li>warto się zastanowić kiedy dzwonić, żeby komuś nie przeszkadzać w prezentacjach,</li>
-            <li>jeżeli ktoś nie odbierze, to wysyłamy smsa z informacją, że ma oddzwonić i odpowiedzieć na pytania w ciągu kilku godzin.</li>
-            <li>o zwycięzcach decyduje liczba prawidłowo udzielonych odpowiedzi + czas (nie można oddać głosu dopóki nie zostaną odczytane wszystkie odpowiedzi?),</li>
-            <li>strona główna aplikacji prezentuje aktualny ranking uczestników,</li>
-        </ul>
-    </li>
-</ol>
 
 <h2>Dane kontaktowe</h2>
 <ul>
     <li>Kamil Kujawiński</li>
     <li>Marcin Najtkowski</li>
-</ul>
+</ul> #}
+
+
+<body data-spy="scroll" data-offset="20" data-target="#navbar">
+    <!-- Nav Menu Section -->
+    <div class="logo-menu">
+        <nav class="navbar navbar-default navbar-fixed-top" role="navigation" data-spy="affix" data-offset-top="50">
+            <div class="container">
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header col-md-6">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#home">Porozmawiaj ze swoją aplikacją</a>
+                </div>
+                <div class="collapse navbar-collapse" id="navbar">
+                    <ul class="nav navbar-nav col-md-6 pull-right">
+                        <li><a href="#lottery"><i class="fa fa-trophy"></i> Konkurs</a></li>
+                        <li><a href="#talk"><i class="fa fa-television"></i> Prezentacja</a></li>
+                        <li><a href="#contact"><i class="fa fa-envelope"></i> O nas</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </div>
+
+    <section id="hero-area">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <h1 class="title">Poromawiaj ze swoją aplikacją &ndash; PyCon&nbsp;PL&nbsp;2015</h1>
+                    <h2 class="subtitle">Kamil Kujawiński, Marcin Najtkowski</h2>
+                    <img class="col-lg-6 col-md-4 hidden-xs hidden-sm animated fadeInLeft" src="{{ static('assets/img/hero/macbook.png') }}" alt="">
+                    <div class="col-lg-6 col-md-8 col-sm-12 animated fadeInRight delay-0-5">
+                        <p>Na przykładzie aplikacji budowanej podczas prezentacji pokażemy jak łatwo wzbogacić własny projekt o możliwość interakcji z użytkownikiem za pomocą telefonu (nie koniecznie smartfona!). Na koniec, wykorzystując prezentowany kod, przeprowadzimy krótki konkurs “audiotele” z nagrodami dla uczestników, demonstrujący ułamek możliwości, jakie daje Twilio.</p>
+                        <a href="#lottery" class="btn btn-primary btn-lg">Weź udział w konkursie</a>
+                        <a href="#talk" class="btn btn-common btn-lg">Zobacz prezentację</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <a name="lottery"></a>
+    <section id="lottery">
+        <div class="container text-center">
+            <div class="row">
+                <h1 class="title">Konkurs</h1>
+                <p>Wszyscy zarejestrowani uczestnicy po prezentacji ortzymają telefon z listą pytań dotyczących spraw wszelakich. Nagrodami są</p>
+
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                    <div class="service-item">
+                        <img src="{{ static('assets/img/services/responsive.png') }}" alt="">
+                        <h3>Rejestracja</h3>
+                        <p>Wyślij sms ze swoim nickem pod numer +48 12345678</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                    <div class="service-item">
+                        <img src="{{ static('assets/img/services/bs3.png') }}" alt="">
+                        <h3>Aktualni uczestnicy</h3>
+                        <ol class="text-left">
+                            <li>Boss (...948)</li>
+                        </ol>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                    <div class="service-item">
+                        <img src="{{ static('assets/img/services/free.png') }}" alt="">
+                        <h3>Zasady</h3>
+                        <ol class="text-left">
+                            <li>rejestracja smsem z nazwą (emailem?)</li>
+                            <li>odesłanie potwierdzenia</li>
+                            <li>po prezentacji telefon od aplikacji do uczestników z pytaniami konkursowymi, odpowiedzi są przy pomocy tonowo wybieranych numerów,
+                                <ul>
+                                    <li>wszyscy mają te same pytania, ale są podane w losowej kolejności i losowa kolejność odpowiedzi (żeby uniknąć zapamiętania kolejności odpowiedzi z jednego konta i udzielania na szybko z drugiego),</li>
+                                    <li>warto się zastanowić kiedy dzwonić, żeby komuś nie przeszkadzać w prezentacjach,</li>
+                                    <li>jeżeli ktoś nie odbierze, to wysyłamy smsa z informacją, że ma oddzwonić i odpowiedzieć na pytania w ciągu kilku godzin.</li>
+                                    <li>o zwycięzcach decyduje liczba prawidłowo udzielonych odpowiedzi + czas (nie można oddać głosu dopóki nie zostaną odczytane wszystkie odpowiedzi?),</li>
+                                    <li>strona główna aplikacji prezentuje aktualny ranking uczestników,</li>
+                                </ul>
+                            </li>
+                        </ol>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <a name="talk"></a>
+    <section id="talk">
+        <div class="container text-center">
+            <div class="row">
+                <h1 class="title">Prezentacja</h1>
+                <div class="wow fadeInDown">
+                    <div class="col-sm-6 col-xs-12">
+                        <h2>Kod aplikacji</h2>
+                        <div style="font-size: 12em;">
+                            <i class="fa fa-github"></i>
+                        </div>
+                        <a href="https://github.com/kkujawinski/talktoyourapp">https://github.com/kkujawinski/talktoyourapp</a>
+                    </div>
+                    <div class="col-sm-6 col-xs-12">
+                        <h2>Slajdy</h2>
+                        <div style="font-size: 12em;">
+                            <i class="fa fa-slideshare"></i>
+                        </div>
+                        <a href="">https://slideshare/xyz</a>
+                        <p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <a name="contact"></a>
+    <section id="contact">
+        <div class="container">
+            <div class="row">
+                <h1 class="title">Kontakt</h1>
+                <div class="col-sm-6 col-xs-12 text-center">
+                    <h2>Kamil Kujawiński</h2>
+                    <img src="{{ static('assets/img/kkujawinski_avatar.png') }}" alt="" class="col-md-4 col-sm-5 col-sm-offset-0 col-xs-4 col-xs-offset-4 img-circle">
+                    <div class="col-md-8 col-sm-7 col-xs-12 text-left">
+                        <p>Programista Pythona od paru lat. Pracował w STX Next, teraz sam pracuje dla zagranicznych klientów.</p>
+                        <p><i class="fa fa-envelope"></i> kamil@kujawinski.net</p>
+                        <p><i class="fa fa-linkedin-square"></i> <a href="https://pl.linkedin.com/in/kkujawinski">Kamil Kujawiński</a></p>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-xs-12">
+                    <h2>Marcin Najtkowski</h2>
+                    <p><i class="fa fa-envelope"></i> ...</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Conatct Section End-->
+    <div id="copyright">
+        <div class="container">
+            <div class="col-md-10">
+                <p>© Corporal 2014 All right reserved. Design & Developed by <a href="http://graygrids.com">GrayGrids</a></p>
+            </div>
+            <div class="col-md-2">
+                <span class="to-top pull-right"><a href="#hero-area"><i class="fa fa-angle-up fa-2x"></i></a></span>
+            </div>
+        </div>
+    </div>
+    <!-- Copyright Section End-->
+    <!-- Bootstrap JS -->
+    <script src="assets/js/bootstrap.min.js"></script>
+    <!-- Smooth Scroll -->
+    <!-- Smooth Scroll -->
+    <script src="assets/js/smooth-scroll.js"></script>
+    <script src="assets/js/lightbox.min.js"></script>
+    <!-- All JS plugin Triggers -->
+    <script src="assets/js/main.js"></script>
+</body>
+
+</html>
