--- a/home/jinja2/home/home.html
+++ b/home/jinja2/home/home.html
@@ -55,7 +55,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#home">Porozmawiaj ze swoją aplikacją</a>
+                    <a class="navbar-brand" href="#home"><span class="hidden-xs">Porozmawiaj ze swoją aplikacją</span><span class="visible-xs">Porozmawiaj ze swoją...</span></a>
                 </div>
                 <div class="collapse navbar-collapse" id="navbar">
                     <ul class="nav navbar-nav col-md-6 pull-right">
