home template changes

--- a/home/jinja2/home/home.html
+++ b/home/jinja2/home/home.html
@@ -55,7 +55,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#home"><span class="hidden-xs">Porozmawiaj ze swoją aplikacją</span><span class="visible-xs">Porozmawiaj ze swoją...</span></a>
+                    <a class="navbar-brand" href="#home"><span class="hidden-xs">Porozmawiaj ze swoją aplikacją</span><span class="visible-xs">Porozmawiaj...</span></a>
                 </div>
                 <div class="collapse navbar-collapse" id="navbar">
                     <ul class="nav navbar-nav col-md-6 pull-right">
@@ -178,7 +178,7 @@
             </div>
         </div>
     </section>
-    <!-- Conatct Section End-->
+
     <div id="copyright">
         <div class="container">
             <div class="col-md-10">
